--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>wow Base Site </h1>
-<a href="https://AtlasTheMarten.github.io/Portfolio/Base Site.html" title="Base Site">Base Site</a>
+<h1>wow </h1>
+<a href="https://AtlasTheMarten.github.io/Portfolio/Base Site.htm" title="Base Site">Base Site</a>
