--- a/Base Site.html
+++ b/Base Site.html
@@ -76,7 +76,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <!-- Updated link to GitHub hosted resume -->
-            <a href="https://github.com/EthanWheeler000/Resume/raw/main/Ethan%20Wheeler%20resume%20feb%202026.pdf" target="_blank" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm transition-all flex items-center gap-2">
+            <a href="https://AtlasTheMarten.github.io/Portfolio/Ethan Wheeler resume feb 2026" target="_blank" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm transition-all flex items-center gap-2">
                 <i class="fas fa-download"></i> Download Resume
             </a>
         </div>
@@ -102,7 +102,7 @@
                 <div class="absolute inset-0 bg-blue-500 blur-[80px] opacity-20 animate-pulse group-hover:opacity-30 transition-opacity"></div>
                 <div class="relative w-full h-full glass rounded-3xl border border-white/10 flex items-center justify-center overflow-hidden transition-transform group-hover:scale-[1.02]">
                     <!-- Updated image link to your GitHub hosted profile photo -->
-                    <img src="https://github.com/EthanWheeler000/Resume/raw/main/Headshot.JPG" 
+                    <img src="https://AtlasTheMarten.github.io/Portfolio/photo_2026-02-18_11-21-31.jpg" 
                          alt="Ethan Wheeler" 
                          class="w-full h-full object-cover"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
