--- a/Base Site.html
+++ b/Base Site.html
@@ -76,7 +76,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <!-- Updated link to GitHub hosted resume -->
-            <a href="https://AtlasTheMarten.github.io/Portfolio/Ethan Wheeler resume feb 2026" target="_blank" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm transition-all flex items-center gap-2">
+            <a href="https://AtlasTheMarten.github.io/Portfolio/Ethan Wheeler resume feb 2026.pdf" target="_blank" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm transition-all flex items-center gap-2">
                 <i class="fas fa-download"></i> Download Resume
             </a>
         </div>
