--- a/index.html
+++ b/index.html
@@ -1,2 +1,298 @@
-<h1>wow </h1>
-<a href="https://AtlasTheMarten.github.io/Portfolio/Base Site.html" title="Base Site">Base Site</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Engineering Portfolio | Ethan Wheeler</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=JetBrains+Mono:wght@400;500&display=swap');
+        
+        :root {
+            --bg-dark: #0f172a;
+            --accent: #3b82f6;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-dark);
+            color: #e2e8f0;
+            scroll-behavior: smooth;
+        }
+
+        .mono { font-family: 'JetBrains Mono', monospace; }
+
+        .glass {
+            background: rgba(30, 41, 59, 0.7);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .gradient-text {
+            background: linear-gradient(90deg, #60a5fa, #3b82f6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .video-placeholder {
+            aspect-ratio: 16 / 9;
+            background: linear-gradient(45deg, #1e293b, #0f172a);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 0.75rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .video-placeholder::after {
+            content: "\f04b";
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            font-size: 3rem;
+            color: rgba(59, 130, 246, 0.5);
+        }
+
+        .nav-link {
+            transition: all 0.3s ease;
+        }
+
+        .nav-link:hover {
+            color: #3b82f6;
+        }
+    </style>
+</head>
+<body class="selection:bg-blue-500/30">
+
+    <!-- Navigation -->
+    <nav class="fixed top-0 w-full z-50 glass border-b border-white/5">
+        <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
+            <span class="mono font-bold text-xl tracking-tighter uppercase text-blue-400">Ethan Wheeler</span>
+            <div class="hidden md:flex space-x-8 text-sm font-medium">
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#experience" class="nav-link">Experience</a>
+                <a href="#projects" class="nav-link">Projects</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </div>
+            <!-- Updated link to GitHub hosted resume -->
+            <a href="https://AtlasTheMarten.github.io/Portfolio/Ethan Wheeler resume feb 2026.pdf" target="_blank" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg text-sm transition-all flex items-center gap-2">
+                <i class="fas fa-download"></i> Download Resume
+            </a>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="pt-32 pb-20 px-6">
+        <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-12">
+            <div class="flex-1 text-center md:text-left">
+                <p class="mono text-blue-400 mb-4 tracking-widest uppercase text-sm">Biomedical Engineering Student</p>
+                <h1 class="text-3xl md:text-5xl font-bold mb-2 text-slate-300">Welcome! My name is</h1>
+                 <h1 class="text-5xl md:text-7xl font-bold mb-6"> <span class="gradient-text">Ethan Wheeler</span></h1>
+                <p class="text-slate-400 text-lg mb-8 max-w-xl leading-relaxed">
+                    I am an engineering student at The University of Tennessee, Knoxville, majoring in Biomedical Engineering with a minor in Neuroscience. I am passionate about robotics, neuroscience, and environmental stewardship. 
+                    I strive for efficient use of resources to create impactful technology that brings people together and forward.
+                </p>
+                <div class="flex justify-center md:justify-start gap-4">
+                    <a href="#projects" class="px-6 py-3 bg-white text-slate-900 rounded-full font-semibold hover:bg-blue-50 transition-all">View Projects</a>
+                    <a href="https://www.linkedin.com/in/ethan-wheeler-76612a250/" target="_blank" class="px-6 py-3 glass rounded-full font-semibold hover:border-blue-400/50 transition-all">LinkedIn</a>
+                </div>
+            </div>
+            <div class="w-64 h-64 md:w-80 md:h-80 relative group">
+                <div class="absolute inset-0 bg-blue-500 blur-[80px] opacity-20 animate-pulse group-hover:opacity-30 transition-opacity"></div>
+                <div class="relative w-full h-full glass rounded-3xl border border-white/10 flex items-center justify-center overflow-hidden transition-transform group-hover:scale-[1.02]">
+                    <!-- Updated image link to your GitHub hosted profile photo -->
+                    <img src="https://AtlasTheMarten.github.io/Portfolio/photo_2026-02-18_11-21-31.jpg" 
+                         alt="Ethan Wheeler" 
+                         class="w-full h-full object-cover"
+                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="hidden w-full h-full items-center justify-center">
+                         <i class="fas fa-user-circle text-9xl text-slate-700"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Work Experience -->
+    <section id="experience" class="py-20 bg-slate-900/50">
+        <div class="max-w-4xl mx-auto px-6">
+            <h2 class="text-3xl font-bold mb-12 flex items-center gap-4">
+                <span class="text-blue-500">01.</span> Professional Journey
+            </h2>
+            
+            <div class="space-y-12 border-l-2 border-slate-800 ml-4 pl-8">
+                <!-- Job 1 -->
+                <div class="relative">
+                    <div class="absolute -left-[41px] top-1 w-4 h-4 rounded-full bg-blue-500 ring-4 ring-slate-900"></div>
+                    <div>
+                        <h3 class="text-xl font-bold text-slate-100">Engineering Intern</h3>
+                        <p class="text-blue-400 font-medium mb-2">United States Public Health Service - Indian Health Service • May 2025 - Aug 2025</p>
+                        <ul class="text-slate-400 space-y-2 list-disc list-outside ml-4">
+                            <li>Oversee civil engineering construction projects of medical facilities.</li>
+                            <li>Inspect water treatment systems on reservations, including pumps and storage tanks.</li>
+                            <li>Perform environmental audits for the EPA on reservation sites.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Job 2 -->
+                <div class="relative">
+                    <div class="absolute -left-[41px] top-1 w-4 h-4 rounded-full bg-slate-700 ring-4 ring-slate-900"></div>
+                    <div>
+                        <h3 class="text-xl font-bold text-slate-100">Quality Engineer Intern</h3>
+                        <p class="text-blue-400 font-medium mb-2">Kelvion • Jan 2024 - May 2024</p>
+                        <ul class="text-slate-400 space-y-2 list-disc list-outside ml-4">
+                            <li>Inspected heat exchanger manufacturing and tracked supply chain issues.</li>
+                            <li>Assisted in reading complex engineering drawings and shadowing senior engineers.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Job 3 -->
+                <div class="relative">
+                    <div class="absolute -left-[41px] top-1 w-4 h-4 rounded-full bg-slate-700 ring-4 ring-slate-900"></div>
+                    <div>
+                        <h3 class="text-xl font-bold text-slate-100">Research Assistant</h3>
+                        <p class="text-blue-400 font-medium mb-2">Karolinska Institute (Stockholm) • Jan 2024 - May 2024</p>
+                        <ul class="text-slate-400 space-y-2 list-disc list-outside ml-4">
+                            <li>Performed immunochemistry fluorescent staining on human brain tissue samples.</li>
+                            <li>Analyzed protein expression patterns in specific brain regions.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Job 4 -->
+                <div class="relative">
+                    <div class="absolute -left-[41px] top-1 w-4 h-4 rounded-full bg-slate-700 ring-4 ring-slate-900"></div>
+                    <div>
+                        <h3 class="text-xl font-bold text-slate-100">Drone Pilot</h3>
+                        <p class="text-blue-400 font-medium mb-2">UT NIMBios Lab • June 2023 - May 2025</p>
+                        <ul class="text-slate-400 space-y-2 list-disc list-outside ml-4">
+                            <li>Piloted Mavic 2 Enterprise for thermal and visual spatial analysis.</li>
+                            <li>Managed airworthiness checks and flight data registration.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="py-20 px-6">
+        <div class="max-w-6xl mx-auto">
+            <h2 class="text-3xl font-bold mb-12 flex items-center gap-4">
+                <span class="text-blue-500">02.</span> Personal Projects
+            </h2>
+
+            <div class="grid md:grid-cols-2 gap-12">
+                <!-- Project 1 -->
+                <div class="group">
+                    <div class="video-placeholder mb-6 group-hover:scale-[1.02] transition-transform cursor-pointer">
+                        <div class="absolute inset-0 flex items-center justify-center bg-slate-800/50">
+                            <i class="fas fa-robot text-5xl text-blue-500/30"></i>
+                        </div>
+                        <span class="absolute bottom-4 right-4 bg-black/60 px-2 py-1 rounded text-xs mono">Oct 2025 - Feb 2026</span>
+                    </div>
+                    <div class="flex gap-2 mb-3">
+                        <span class="px-3 py-1 bg-blue-500/10 text-blue-400 text-xs rounded-full mono">Robotics</span>
+                        <span class="px-3 py-1 bg-blue-500/10 text-blue-400 text-xs rounded-full mono">Fusion360</span>
+                        <span class="px-3 py-1 bg-blue-500/10 text-blue-400 text-xs rounded-full mono">3D Printing</span>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-4 group-hover:text-blue-400 transition-colors">Resumé Arm</h3>
+                    <p class="text-slate-400 mb-6 leading-relaxed">
+                        A self-designed machine featuring a robotic arm and paper dispenser. Iteratively designed mechanisms in CAD, wired, and coded the control system, and optimized for a $600 self-funded budget.
+                    </p>
+                    <div class="flex gap-4">
+                        <span class="text-xs text-slate-500 italic">Rapid Prototyping | Mechanical Interfaces | C++</span>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="group">
+                    <div class="video-placeholder mb-6 group-hover:scale-[1.02] transition-transform cursor-pointer overflow-hidden">
+                        <div class="absolute inset-0 flex items-center justify-center bg-slate-800/50">
+                            <i class="fas fa-bicycle text-5xl text-blue-500/30"></i>
+                        </div>
+                        <span class="absolute bottom-4 right-4 bg-black/60 px-2 py-1 rounded text-xs mono">Oct 2024 - May 2025</span>
+                    </div>
+                    <div class="flex gap-2 mb-3">
+                        <span class="px-3 py-1 bg-blue-500/10 text-blue-400 text-xs rounded-full mono">E-Mobility</span>
+                        <span class="px-3 py-1 bg-blue-500/10 text-blue-400 text-xs rounded-full mono">Battery Design</span>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-4 group-hover:text-blue-400 transition-colors">Electric Bike Conversions</h3>
+                    <p class="text-slate-400 mb-6 leading-relaxed">
+                        Converted mountain and road bikes to electric power. Designed and built custom battery packs safely while maintaining a strict $250 budget through cost-effective hardware sourcing.
+                    </p>
+                    <div class="flex gap-4">
+                        <span class="text-xs text-slate-500 italic">Power Systems | Resource Optimization | DIY Electronics</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Technical Skills -->
+    <section class="py-20 bg-slate-900/30">
+        <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+            <div class="glass p-8 rounded-2xl">
+                <i class="fas fa-cube text-3xl text-blue-500 mb-6"></i>
+                <h4 class="text-lg font-bold mb-4 uppercase tracking-wider">Technical Design</h4>
+                <ul class="text-slate-400 space-y-2 mono text-sm">
+                    <li>- Fusion360</li>
+                    <li>- Blender</li>
+                    <li>- Adobe Suite</li>
+                    <li>- Davinci Resolve</li>
+                    <li>- 3D Printing</li>
+                </ul>
+            </div>
+            <div class="glass p-8 rounded-2xl">
+                <i class="fas fa-microchip text-3xl text-blue-500 mb-6"></i>
+                <h4 class="text-lg font-bold mb-4 uppercase tracking-wider">Engineering</h4>
+                <ul class="text-slate-400 space-y-2 mono text-sm">
+                    <li>- Drone Piloting (Mavic 2E)</li>
+                    <li>- Mechatronics</li>
+                    <li>- Signal Analysis</li>
+                    <li>- System Dynamics</li>
+                    <li>- Circuit Design</li>
+                </ul>
+            </div>
+            <div class="glass p-8 rounded-2xl">
+                <i class="fas fa-flask text-3xl text-blue-500 mb-6"></i>
+                <h4 class="text-lg font-bold mb-4 uppercase tracking-wider">Professional</h4>
+                <ul class="text-slate-400 space-y-2 mono text-sm">
+                    <li>- Laboratory Procedures</li>
+                    <li>- Technical Writing</li>
+                    <li>- Immunochemistry</li>
+                    <li>- Environmental Audits</li>
+                    <li>- International Experience</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer / Contact -->
+    <footer id="contact" class="py-20 border-t border-white/5">
+        <div class="max-w-4xl mx-auto px-6 text-center">
+            <h2 class="text-4xl font-bold mb-6">Get In Touch</h2>
+            <p class="text-slate-400 mb-10 text-lg">
+                Currently pursuing B.S. in Biomedical Engineering at UTK. Let's connect about research opportunities or engineering projects!
+            </p>
+            <div class="flex flex-col md:flex-row justify-center items-center gap-6 mb-12">
+                <a href="mailto:ethan.wheeler000@gmail.com" class="px-10 py-4 border-2 border-blue-500 text-blue-400 font-bold rounded-lg hover:bg-blue-500 hover:text-white transition-all">
+                    Email Me
+                </a>
+                <span class="text-slate-500 mono">+1 865-599-4286</span>
+            </div>
+            <div class="flex justify-center space-x-8 text-2xl text-slate-500">
+                <a href="https://www.linkedin.com/in/ethan-wheeler-76612a250/" target="_blank" class="hover:text-blue-500 transition-colors"><i class="fab fa-linkedin"></i></a>
+                <a href="http://engineeringmarten.com" class="hover:text-blue-500 transition-colors"><i class="fas fa-globe"></i></a>
+            </div>
+            <p class="mt-20 text-slate-600 text-sm mono italic">
+                Designed & Built by Ethan Wheeler © 2026
+            </p>
+        </div>
+    </footer>
+
+</body>
+</html>
