--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <a href="mailto:ethan.wheeler000@gmail.com" class="px-10 py-4 border-2 border-blue-500 text-blue-400 font-bold rounded-lg hover:bg-blue-500 hover:text-white transition-all">
                     Email Me
                 </a>
-                <span class="text-slate-500 mono">+1 865-599-4286</span>
+               <!-- <span class="text-slate-500 mono">+1 865-599-4286</span> -->
             </div>
             <div class="flex justify-center space-x-8 text-2xl text-slate-500">
                 <a href="https://www.linkedin.com/in/ethan-wheeler-76612a250/" target="_blank" class="hover:text-blue-500 transition-colors"><i class="fab fa-linkedin"></i></a>
