--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <!-- Adjust the pixel value in transform: translateY(0px) to move it up or down precisely -->
         <div class="absolute bottom-0 left-0 w-full z-0 pointer-events-none opacity-80 md:opacity-100" 
              style="transform: translateY(95px);">
-            <img src="https://AtlasTheMarten.github.io/Portfolio/Bottom banner.png" alt="Bottom Banner" class="w-full block">
+            <!--img src="https://AtlasTheMarten.github.io/Portfolio/Bottom banner.png" alt="Bottom Banner" class="w-full block"-->
         </div>
     </footer>
 
